tests/fixtures/invalid/float_bitnot.py
# Cannot use bitwise NOT on Float
x: float = 1.0
y: int = ~x
